@@ -1,4 +1,4 @@
-const char *version_string = "3.2.0";
-const char *date_string = "2005-12-15";
+const char *version_string = "3.2.0rc4";
+const char *date_string = "2006-01-05";
 /* NEW TAG "modules-3-2-0" */
 /* OLD TAG "modules-3-1-6" */
