@@ -57,6 +57,8 @@ Modules 3.2.0
 	* Eliminated any warnings caused by using Tcl 8.4
 	* Fixed any mixed size differences when using ints and pointers.
 	  (Only an issue with 64 bit machines.)
+	* Updated the init* subcommands to work on multiple "module load"
+	  lines in the "dot rc" files.  Added a suite of tests too.
 
 	Contributor:
 	 	Andrew Ruder  		<aer@absoft.com>
